--- a/new calculator.css
+++ b/new calculator.css
@@ -1,8 +1,6 @@
 body{
     background: linear-gradient(#ccdced, #ebe1d8, #a58361);
-    display: flex;
-    justify-content: space-around;
-    margin: 20px auto;
+    height: 97vh;
 }
 
 .container{
@@ -37,14 +35,14 @@ body{
 
 .container2{
     width: 250px;
-    margin: 100px auto;
+    margin: 10px auto;
     background: linear-gradient(#ccdced,
         #ebe1d8,
         #a58361);
     border-radius: 5px;
     box-shadow: 2px 2px 10px #ecf0f3,-2px -2px 10px #ecf0f3;
     position: relative;
-    left: 80px;
+    /* left: 80px; */
 }
 .line1,.line2,.line3,.line4,.line5{
     display: flex;
@@ -142,17 +140,17 @@ input[type="button"],button{
 }
 
 .line1 input:hover,
- .line11 input:hover {
-     box-shadow: inset 2px 2px 8px #1010101a,
-         inset -2px -2px 8px #fff;
-     background: #ccdced;
- }
+.line11 input:hover {
+    box-shadow: inset 2px 2px 8px #1010101a,
+        inset -2px -2px 8px #fff;
+    background: #ccdced;
+}
 
 .line2 input:hover,
 .line21 input:hover {
-     box-shadow: inset 2px 2px 8px #1010101a,
-         inset -2px -2px 8px #fff;
-     background: linear-gradient(#ccdced, #ebe1d8);
+    box-shadow: inset 2px 2px 8px #1010101a,
+        inset -2px -2px 8px #fff;
+    background: linear-gradient(#ccdced, #ebe1d8);
 }
 
 .line3 input:hover,
@@ -174,3 +172,40 @@ input[type="button"],button{
         inset -2px -2px 8px #fff;
     background: #a58361;
 }
+
+/* Start Media */
+@media (max-width: 500px) {
+    .container1{
+        background: linear-gradient(#a58361, #ebe1d8, #ccdced);
+        top: 368px;
+        left: 73px;
+        border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    }
+    .line11 input {
+        background: #a58361;
+        color: #ebe1d8;
+    }
+    .line21 input {
+        background: linear-gradient(#a58361,#ebe1d8);
+        color: #ebe1d8;
+    }
+    .line31 input, .line31 button {
+        background: linear-gradient(#ebe1d8,#ccdced);
+        color: #a58361;
+    }
+    .line41 input {
+        background: #ccdced;
+        color: #a58361;
+    }
+    .container2{
+        border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+    }
+}
+/* End Media */
+/* 
+#a58361
+#ebe1d8
+#ccdced
+*/
