--- a/new calculator.css
+++ b/new calculator.css
@@ -1,6 +1,7 @@
 body{
     background: linear-gradient(#ccdced, #ebe1d8, #a58361);
     height: 97vh;
+    background-repeat: no-repeat;
 }
 
 .container{
@@ -35,7 +36,7 @@ body{
 
 .container2{
     width: 250px;
-    margin: 10px auto;
+    margin: 65px auto;
     background: linear-gradient(#ccdced,
         #ebe1d8,
         #a58361);
@@ -177,7 +178,7 @@ input[type="button"],button{
 @media (max-width: 500px) {
     .container1{
         background: linear-gradient(#a58361, #ebe1d8, #ccdced);
-        top: 368px;
+        top: 422px;
         left: 73px;
         border-top-left-radius: 0;
     border-top-right-radius: 0;
