--- a/new calculator.css
+++ b/new calculator.css
@@ -2,24 +2,28 @@ body{
     background: linear-gradient(#ccdced, #ebe1d8, #a58361);
     height: 97vh;
     background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
 }
 
 .container{
     display: flex;
     justify-content: center;
     position: relative;
+    width: 500px;
+    height: 500px;
 }
 
 .container1{
-    width: 250px;
+width: 250px;
     height: 173px;
     background: linear-gradient(#ccdced, #ebe1d8, #a58361);
     border-radius: 5px;
     box-shadow: 7px 7px 10px #a58361, -7px -7px 10px #ccdced;
     visibility: hidden;
-    position: absolute;
-    top: 220px;
-    left: -170px;
+    position: relative;
+    top: 185px;
+    left: 0;
 }
 .line11,
 .line21,
@@ -37,13 +41,10 @@ body{
 .container2{
     width: 250px;
     margin: 65px auto;
-    background: linear-gradient(#ccdced,
-        #ebe1d8,
-        #a58361);
+    background: linear-gradient(#ccdced, #ebe1d8, #a58361);
     border-radius: 5px;
-    box-shadow: 2px 2px 10px #ecf0f3,-2px -2px 10px #ecf0f3;
+    box-shadow: 2px 2px 10px #ecf0f3, -2px -2px 10px #ecf0f3;
     position: relative;
-    /* left: 80px; */
 }
 .line1,.line2,.line3,.line4,.line5{
     display: flex;
@@ -176,10 +177,14 @@ input[type="button"],button{
 
 /* Start Media */
 @media (max-width: 500px) {
+    .container{
+        width: 250px;
+        height: 100%;
+        display: block;
+    }
     .container1{
         background: linear-gradient(#a58361, #ebe1d8, #ccdced);
-        top: 422px;
-        left: 73px;
+        top: 531px;
         border-top-left-radius: 0;
     border-top-right-radius: 0;
     }
@@ -200,8 +205,9 @@ input[type="button"],button{
         color: #a58361;
     }
     .container2{
+        margin: 0 auto;
         border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
+        border-bottom-left-radius: 0;
     }
 }
 /* End Media */
